# jobman

./: .dockerignore  .editorconfig  .gitignore  .golangci.yml  .goreleaser.yml  .releaserc  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.ccf  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cspell  Dockerfile.cspell.dockerignore  Dockerfile.goreleaser  Dockerfile.pages  Dockerfile.pages.dockerignore  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  bumpver.sh  cspell.json  go.mod  go.sum  main.go  main_test.go  poetry.toml  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  labels.yml  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  dependency-review.yml  docs-links.yml  fuzz.yml  labeler.yml  pages.yml  release.yml  repair-latest.yml  scorecard.yml  soak.yml  test.yml  update.yml
Casks/: jobman.rb
devel/: README.md  check-coverage.awk  check-release.sh  container-smoke.sh  prepare-release-changelog.sh  release_metadata_test.go
devel/autocomplete/: autocomplete.go  autocomplete_test.go
devel/dogfood/: capture.sh  command-notifier.sh  soak.ps1  soak.sh  unix-process-tree.sh
devel/manpages/: manpages.go  manpages_test.go
devel/releasemetadata/: main.go  main_test.go
devel/sitedocs/: failure_boundary_additional_test.go  main.go  main_test.go
devel/thirdpartynotices/: main.go  main_test.go
devel/updates/: README.md  copyright-date.sh  go-vers.sh  release-metadata.sh
docs/: .gitignore  COMPATIBILITY.md  CONFIGURATION.md  CONTAINERS.md  DOGFOOD.md  README.md  UPGRADING.md  _config.yml  configuration.md  index.md
docs/_about/: development.yml  license.yml
docs/_contributing/: basics.md  index.md  introduction.md  pr_process.md  release_process.md
docs/_other/: alternatives.md  common_recipes.md  development.md  faq.md
docs/_static/: index.md
docs/_user_guide/: basics.md  configuration.md  getting_started.md  index.md
docs/completions/: README.md
docs/design/: IMPLEMENTATION_PLAN.md  PERSISTED_SCHEMA.md  PLATFORM_CAPABILITIES.md  README.md  SPEC.md
docs/manpage/: README.md
docs/static/: about.md  configuration.md
etc/: README.md
etc/jobman/: jobman.yml
installer/: jobman_pyinstaller_wrapper.py
internal/app/: api.go  coverage_test.go  query_doctor_test.go  service.go  service_boundary_additional_test.go  service_test.go
internal/buildinfo/: buildinfo.go  buildinfo_test.go
internal/config/: coverage_additional_test.go  environment.go  errors.go  integration_boundary_additional_test.go  load.go  load_test.go  paths.go  paths_test.go  profile.go  scalars.go  scalars_test.go  secrets.go  secrets_test.go  state.go  state_test.go  types.go  types_additional_test.go  validate.go  validate_edges_test.go  validate_test.go
internal/executor/: executor.go  executor_test.go  executor_unix.go  executor_windows.go
internal/faultinject/: faultinject_disabled.go  faultinject_enabled.go
internal/liveinput/: liveinput.go  liveinput_test.go  local_unix.go  local_unix_additional_test.go  local_windows.go
internal/logstore/: cleanup.go  cleanup_identity_unix.go  cleanup_identity_windows.go  cleanup_race_additional_test.go  cleanup_test.go  coverage_test.go  durability_boundary_additional_test.go  follow.go  follow_test.go  fuzz_test.go  index.go  links_other.go  logstore.go  (+12 more)
jobman/: __init__.py  base_logger.py  cancel.go  clean.go  clean_test.go  cli.py  command_boundary_additional_test.go  config.go  config.py  config_cmd.go  config_test.go  configuration.go  coverage_test.go  display.py  doctor.go  errors.go  exceptions.py  gc.py  host.py  jobman.py  kill.go  kill_test.go  lifecycle.go  list.go  list_test.go  logs.go  logs_test.go  models.py  nohup.py  presentation.go  presentation_test.go  redaction.go  root.go  root_test.go  rotating_stdio.py  run.go  run_policy.go  run_test.go  runtime.go  scalar_flags.go  (+5 more)
site/: 404.md  README.md  _config.yml  index.md
tests/: README.md  test_cli.py  test_jobman.py
(+166 files in other folders)
